# forcefocus

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  mise.toml  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
