[package]
edition = "2021"
name = "agsolutions_forcefocus"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi4 = N-API v4 — sufficient for the simple Buffer-in / void-out surface
# https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.8.6", default-features = false, features = ["napi4"] }
napi-derive = "3.5.5"
windows = { version = "0.62.2", default-features = false, features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
strip = "symbols"
